force-app/main/default/objects/Schools_Delivered__c/Schools_Delivered__c.object-meta.xml
<CustomObject>
    <label>Schools Delivered</label>
    <nameField>
        <displayFormat>SCD-{00000}</displayFormat>
        <label>Schools Delivered</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schools Delivered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>