force-app/main/default/objects/Schools_Delivered__c/fields/KiwiSport_Data__c.field-meta.xml
<CustomField>
    <fullName>KiwiSport_Data__c</fullName>
    <label>KiwiSport Data</label>
    <referenceTo>KiwiSport_Data__c</referenceTo>
    <relationshipLabel>Schools Delivered</relationshipLabel>
    <relationshipName>Schools_Delivered</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>