force-app/main/default/objects/Schools_Delivered__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schools Delivered</relationshipLabel>
    <relationshipName>Schools_Delivered</relationshipName>
    <type>Lookup</type>
</CustomField>