force-app/main/default/objects/Schools_Delivered__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Organisation first</inlineHelpText>
    <label>School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>School__c.Organisation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Organization__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Schools Delivered</relationshipLabel>
    <relationshipName>Schools_Delivered</relationshipName>
    <type>Lookup</type>
</CustomField>